--- a/FLE/Proj/proj.tex
+++ b/FLE/Proj/proj.tex
@@ -16,7 +16,7 @@
 % http://acturama.org/spip.php?article231
 
 
-\documentclass[a4paper,11pt]{article}
+\documentclass[a4paper,10pt]{article}
 
 \usepackage[francais,listings,algo]{tcs}
 
@@ -246,7 +246,7 @@ que  la température  moyenne annuelle  global a  augmenté de  $0,74^{\circ}C$ 
 France métropolitaine la valeur est de $0,95^{\circ}C$.% (voir figure \ref{fig:franceMoyenne}).
 En raison de ce réchauffement, on a une augmentation des précipitations
 pendant l'hiver et l'automne (entre 5 et 35 \%) et d’une baisse des précipitations
-pendant l'été.
+pendant l'été\cite{DOCFRANCE} . 
 
 Comme prévision dans le cas plus pessimiste,  la moyenne ira augmenter environ $8,0^{\circ}C$ et
 dans le cas plus optimiste $3,0^{\circ}C$.
@@ -365,7 +365,6 @@ fonctionnement est d'environ 740 000 euros.
 Les baisses de précipitations modélisées dans les principaux bassins versants
 aménagés en unités hydro-électriques laissent envisager une baisse moyenne de
 l’ordre de 15 \% du potentiel productible.
-
 
 \section{La position de la société française}
 \subsection{Les écologistes}
@@ -722,6 +721,31 @@ chemin pour développer et aller négocier.
 
 
 \section*{Conclusion}
+
+
+A cause du rechauffement climatique,  la France aura des impacts économiques à
+court et long terme et aussi des impacts au climat.
+
+Comme réponse aux préjudices la France participe activement dans les décisions
+communotaires  et internationales  pour  arreter l'avance  rapide du  changement
+climatique.
+
+Les entreprises françaises  croient que  il est  important que  les décisions
+prises à faveur du climat soient respectés par tous les pays et pas seulement la
+France  dû   aux  avantages   concurrentiels  des  ces   entreprises  etrangères
+(entreprises  d'autres  pays  qui n'ont  pas  des  limitations  et qui  ont  des
+avantages) par rapport  aux entreprises françaises. Par exemple,  des pays comme
+Canada, Chine et Etats Unis ne sont pas engagés aux derniers traités à faveur du
+climat.
+
+
+\nocite{GREENPEACE}
+\nocite{FR}
+\nocite{ACTU}
+\nocite{GV}
+\nocite{DIC}
+\nocite{SEQ}
+\nocite{DOC}
 
 % ******************************************************
 % REFERENCIAS BIBLIOGRÁFICAS
